<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ResultFragment">
    <TextView
            android:gravity="center"
            android:textColor="@color/darkGray"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/result_default_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"/>
    <Spinner
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:spinnerMode="dialog"/>
    <EditText
            android:hint="@string/result_phone_hint"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="11"
            android:maxLength="6"
            android:digits="0123456789"
            android:id="@+id/inputText"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"/>
    <Button
            android:textColor="@color/colorPrimary"
            android:text="@string/alert_ok"
            android:background="@drawable/button_background"
            android:layout_width="90dp"
            android:layout_height="40dp" android:id="@+id/button"
            app:layout_constraintBottom_toBottomOf="@+id/inputText" app:layout_constraintTop_toTopOf="@+id/inputText"
            app:layout_constraintStart_toEndOf="@+id/inputText" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <androidx.recyclerview.widget.RecyclerView
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/inputText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/rView">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>