<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ManagerCountActivity">
    <androidx.appcompat.widget.Toolbar
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        <TextView
                android:layout_gravity="center"
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="이벤트 당첨 관리"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_margin="15dp"
            android:textColor="@color/darkGray"
            android:textSize="20dp"
            android:text="@string/count_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView17"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/countText"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="4"
            android:id="@+id/countText"
            app:layout_constraintStart_toEndOf="@+id/textView17" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView17" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="@+id/textView17"/>
    <TextView
            android:layout_margin="15dp"
            android:textColor="@color/darkGray"
            android:text="@string/count_title2"
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:layout_height="wrap_content" android:id="@+id/textView18"
            app:layout_constraintBottom_toTopOf="@id/button2" app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="@+id/textView17"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="4"
            android:id="@+id/ratioText"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/countText"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/textView18"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toTopOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="@+id/countText" android:layout_marginStart="8dp"/>
    <Button
            android:textColor="@color/colorPrimary"
            android:text="@string/btn_edit"
            android:layout_margin="15dp"
            android:background="@drawable/button_background"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="70dp"
            android:layout_height="40dp" android:id="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>